--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express.js": "^1.0.0",
+    "mongodb": "^6.12.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
