--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "apps/backend/server.js",
-        "use": "@vercel/node"
-      },
-      {
-        "src": "apps/frontend/package.json",
-        "use": "@vercel/static-build",
-        "config": { "distDir": "build" }
-      }
-    ],
-    "routes": [
-      { "src": "/api/(.*)", "dest": "apps/backend/index.js" },
-      { "src": "/(.*)", "dest": "apps/frontend/build/$1" }
-    ]
-  }
-  
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/api" }] }
