--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "env": "^0.0.2",
     "express.js": "^1.0.0",
     "mongodb": "^6.12.0",
     "xlsx": "^0.18.5"
