--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiball/loaders": "^1.3.1",
     "dotenv": "^10.0.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
